# imx-voiceplayer

./: .gitignore  .gitmodules  BT-USB.sh  Btplayer.pro  CMakeLists.txt  LICENSE.txt  MQueueThread.cpp  MQueueThread.h  MediaPlayerProxy.cpp  MediaPlayerProxy.h  MediaPlayerWrapper.cpp  MediaPlayerWrapper.h  MediaTrackInfo.cpp  MediaTrackInfo.h  README.md  SBOM-imx-voiceplayer-V2.4.0.spdx.json  SW-Content-Register.txt  bt-init.sh  bt-nano.sh  build-demo.sh  main.cpp  main.qml  media.cpp  media.h  medialistwrapper.cpp  medialistwrapper.h  player.cpp  player.h  qml.qrc  usb_uac.sh
Licenses/: BSD-3-Clause.txt  CC-BY-4.0.txt
app/: Btplayer.pro  MQueueThread.cpp  MQueueThread.h  MediaPlayerProxy.cpp  MediaPlayerProxy.h  MediaPlayerWrapper.cpp  MediaPlayerWrapper.h  MediaTrackInfo.cpp  MediaTrackInfo.h  VoicePlayer.pro  main.cpp  main.qml  qml.qrc
connectivity/: DeviceDiscovery.cpp  DeviceDiscovery.h
content/: AudioControl.qml  MetadataInfo.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  PlayerMenuBar.qml  TracksInfo.qml
device/: DeviceInterface.h
licenses/: BSD-3-Clause.txt  README.md  rsc_license.txt
msgq/: CMakeLists.txt  MsgQ.c  README.md  SW-Content-Register.txt
patches/: 0001-add-functionality-for-VITBTPLAY.patch  0001-to-generate-patch.patch  0001-update-VIT-lib.patch
scripts/: Btplayer.service  Config.ini  Enable_VIT_Auto_Start.sh  Enable_VoiceSeeker.sh  Restore_AFEConfig.sh  Restore_VoiceSeeker.sh  asound.conf  bt-init.sh  connect.sh  demos.json  imx-multimedia-sink.conf  init.sh  install.sh  stop.sh  volume.sh
sh/: Config.ini  (+12 more)
(+19 files in other folders)
